# code-line-statistics

./: .gitignore  README.md  main-onefile.spec  main.spec  pyproject.toml  其他笔记.md
src/: consts.py  display_table.py  file_statistics.py  main.py  theme.py  utils.py
src/demos/anno/: anno_demo.py
src/demos/table/: sort_table.py
src/demos/themes/: default_theme.py  propagation.py
src/draw_multi_bar_charts/: directly_in_window.py  group.py
tests/: test_file_statistics.py
